Added meta information

--- a/TomKamphuis.Web/Views/Shared/_Layout.cshtml
+++ b/TomKamphuis.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TomKamphuis</title>
+    <title>Tom Kamphuis | Lead developer & agile enthusiast</title>
+	<meta name="description" content="Tom Kamphuis, lead developer, software engineer, webdeveloper, agile enthusiast, scrum and passionate about his job">
+	<meta name="keywords" content="Tom Kamphuis,Lead developer,Software engineer,Webdeveloper,ASP.NET,ASP.NET MVC,Webforms,C#,TDD,BDD,Agile,Scrum,Coaching">
+	<meta name="author" content="Tom Kamphuis">
     <base href="~/" />
 
     <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
