--- a/TomKamphuis.Web/Views/Shared/_Layout.cshtml
+++ b/TomKamphuis.Web/Views/Shared/_Layout.cshtml
@@ -10,6 +10,10 @@
     <base href="~/" />
 
     <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
+    <environment exclude="Development">
+	    <link rel="stylesheet" href="~/dist/bootstrap-paper.css" asp-append-version="true" />
+	    <link rel="stylesheet" href="~/dist/site.css" asp-append-version="true" />
+    </environment>
 </head>
 <body>
     @RenderBody()
